# pyODM

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pyodm.rst
example/: README.md  example.py
example/Wastewater_COVID19_2022_02_18/data/: AssayMethod.csv  Instrument.csv  Lab.csv  Lookup.csv  Polygon.csv  Reporter.csv  Sample.csv  Site.csv  SiteMeasure.csv  WWMeasure.csv  sheets.numbers  wktPoly.csv
example/Wastewater_COVID19_2022_02_18/metadata/: Lookup_variables.csv  Tables.csv  Variables.csv
example/Wastewater_COVID19_2022_02_18/sheets/: sheets.xlsx
pyodm/: __init__.py  modelling.py  odm.py  sitedata.py
tests/: test_odm.py
